# winnow-offset-bug-repro

./: Cargo.toml
src/: errors.rs  main.rs  parser.rs  token.rs
src/ast/: types.rs
src/parser/: parser_impl.rs
src/parser/parser_impl/: error.rs
src/token/: tokeniser.rs
