[package]
name = "winnow-offset-bug-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
parse-display = "0.8.2"
schemars = "0.8.15"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
winnow = "0.5.15"

[dev-dependencies]
pretty_assertions = "1.4.0"
